# dotfiles

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  ansible.cfg  install.sh  pyproject.toml  run_ansible.sh
.github/workflows/: build.yml  ci.yml
home/: .bash_aliases  .bash_profile  .bashrc  .gitconfig  .gitignore_global  .muttrc  .tmux.conf  .vimrc  .zsh_aliases  .zshenv  .zshrc
home/.config/: starship.toml
home/.config/gh/: hosts.yml
home/.config/ghostty/: config
playbooks/roles/common/tasks/: homesick.yml
playbooks/roles/osx/tasks/: homebrew.yml
playbooks/roles/ubuntu/tasks/: main.yml
scripts/: install.py  install_desktop.sh  link.py  test_setup.py
