[project]
name = "dotfiles"
version = "0.1.0"
requires-python = ">= 3.11"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
dotfiles = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.11"
git = "*"
tmux = "*"
nvim = ">=0.11.6,<0.12"
starship = "*"
wget = "*"
htop = "*"
curl = "*"
tree = "*"
zsh = ">=5.9,<6"
rust = "*"

[tool.pixi.tasks]
install-omz = "git clone --depth=1 https://github.com/ohmyzsh/ohmyzsh.git $HOME/.oh-my-zsh || true"
install-desktop = "bash scripts/install_desktop.sh"
link = "python scripts/link.py"
setup = { depends-on = ["install-omz", "install-desktop", "link"] }
test = "python scripts/test_setup.py"
test-docker = "docker build -t dotfiles-test ."
zsh = "zsh -l"
